--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -52,6 +52,35 @@ html::-webkit-scrollbar-thumb {
    overflow: hidden;
 }
 
+.gradient-background .animated-box {
+   position: absolute;
+   background: rgba(255, 255, 255, .2);
+   display: block;
+   pointer-events: none;
+   border-radius: 1rem;
+   animation: animate 3s linear infinite;
+}
+
+@keyframes animate {
+   0% {
+      opacity: 0;
+      transform: scale(0) translateY(-100%) rotate(0deg);
+   }
+
+   10% {
+      opacity: 1;
+   }
+
+   90% {
+      opacity: 1;
+   }
+
+   100% {
+      opacity: 0;
+      transform: scale(1) translateY(-500%) rotate(360deg);
+   }
+}
+
 .header {
    position: fixed;
    top: 1.5rem; left: 50%;
@@ -68,6 +97,7 @@ html::-webkit-scrollbar-thumb {
    box-shadow: var(--box-shadow);
    padding: 2rem;
    border-radius: .5rem;
+   backdrop-filter: blur(.4rem);
 }
 
 .header .logo {
