Created Teachers section: Structure and styling

--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -81,6 +81,8 @@ section {
    letter-spacing: .1rem;
 }
 
+/* Background animated */
+
 .gradient-background {
    height: 100vh;
    width: 100%;
@@ -119,6 +121,8 @@ section {
       transform: scale(1) translateY(-500%) rotate(360deg);
    }
 }
+
+/* Header section */
 
 .header {
    position: fixed;
@@ -167,6 +171,8 @@ section {
    display: none;
 }
 
+/* Home section */
+
 .home {
    height: 100vh;
    padding: 7rem 2rem;
@@ -195,6 +201,8 @@ section {
    line-height: 1.8;
    padding: 1rem 0;
 }
+
+/* Courses section */
 
 .courses .box-container {
    display: grid;
@@ -251,6 +259,65 @@ section {
 .courses .box-container .box .icons a i {
    padding-right: .5rem;
 }
+
+/* Teachers section */
+
+.teachers .box-container {
+   display: grid;
+   grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
+   gap: 1.5rem;
+}
+
+.teachers .box-container .box {
+   text-align: center;
+   background: var(--background);
+   border-radius: .5rem;
+   border: var(--border);
+   border-top: var(--border-top);
+   border-left: var(--border-left);
+   box-shadow: var(--box-shadow);
+   padding: 2rem;
+   backdrop-filter: 4rem;
+}
+
+.teachers .box-container .box img {
+   height: 15rem;
+   width: 15rem;
+   border-radius: 50%;
+   object-fit: cover;
+}
+
+.teachers .box-container .box h3 {
+   font-size: 2.2rem;
+   color: var(--white);
+}
+
+.teachers .box-container .box span {
+   font-size: 1.6rem;
+   color: var(--white);
+}
+
+.teachers .box-container .box .share {
+   padding-top: 1rem;
+}
+
+.teachers .box-container .box .share a {
+   height: 5rem;
+   width: 5rem;
+   line-height: 5rem;
+   font-size: 2rem;
+   background: var(--background);
+   box-shadow: var(--box-shadow);
+   color: var(--white);
+   border-radius: 1rem;
+   margin: .5rem;
+}
+
+.teachers .box-container .box .share a:hover {
+   background:var(--black);
+}
+
+/* Plan section */
 
 
 
