--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -319,6 +319,82 @@ section {
 
 /* Plan section */
 
+.plan .box-container {
+   display: grid;
+   grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
+   gap: 1.5rem;
+}
+
+.plan .box-container .box {
+   text-align: center;
+   background: var(--background);
+   border-radius: .5rem;
+   border: var(--border);
+   border-top: var(--border-top);
+   border-left: var(--border-left);
+   box-shadow: var(--box-shadow);
+   padding: 2rem 0;
+   backdrop-filter: 4rem;
+}
+
+.plan .box-container .box i {
+   color: var(--white);
+   font-size: 7rem;
+   padding: 1rem 0;
+}
+
+.plan .box-container .box .fa-plane {
+   transform: rotate(-45deg);
+}
+
+.plan .box-container .box h3 {
+   background: rgba(255, 255, 255, .4);
+   font-size: 2rem;
+   padding: 1rem 0;
+   margin: 1rem 0;
+   margin-top: 2rem;
+   color: var(--black);
+}
+
+.plan .box-container .box ul {
+   padding: 1rem 0;
+   list-style: none;
+}
+
+.plan .box-container .box ul li {
+   padding: 1rem 0;
+   color: var(--white);
+   font-size: 1.7rem;
+}
+
+.plan .box-container .box a {
+   display: block;
+   background: rgba(255, 255, 255, .4);
+   font-size: 2rem;
+   padding: 1rem 0;
+   margin: 1rem 0;
+   margin-top: 2rem;
+   color: var(--black);
+   transition: .2s linear;
+}
+
+.plan .box-container .box a:hover {
+   letter-spacing: .1rem;
+} 
+
+.plan .box-container .box .price {
+   font-size: 6rem;
+   padding-top: 1rem;
+   font-weight: bolder;
+   color: var(--white);
+}
+
+.plan .box-container .box .price span {
+   font-size: 3rem;
+   font-weight: normal;
+}
+
+/* Review section */
 
 
 
