--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -396,10 +396,70 @@ section {
 
 /* Review section */
 
+.review .box-container {
+   display: grid;
+   grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
+   gap: 1.5rem;
+}
 
+.review .box-container .box {
+   text-align: center;
+   background: var(--background);
+   border-radius: .5rem;
+   border: var(--border);
+   border-top: var(--border-top);
+   border-left: var(--border-left);
+   box-shadow: var(--box-shadow);
+   padding: 2rem;
+   backdrop-filter: 4rem;
+}
 
+.review .box-container .box .image {
+   display: flex;
+   align-items: center;
+   justify-content: space-between;
+}
 
+.review .box-container .box .image i {
+   font-size: 5rem;
+   color: rgba(255, 255, 255, .4);
+}
 
+.review .box-container .box .image img {
+   height: 7rem;
+   width: 7rem;
+   border-radius: 50%;
+   object-fit: cover;
+}
+
+.review .box-container .box h3 {
+   padding-top:.5rem;
+   font-size: 2.2rem;
+   color: var(--white);
+}
+
+.review .box-container .box span {
+   font-size: 1.4rem;
+   color: var(--black);
+}
+
+.review .box-container .box p {
+   font-size: 1.5rem;
+   color: var(--white);
+   padding: 1rem 0;
+   line-height: 1.8;
+}
+
+.review .box-container .box .stars {
+   padding-top: 1rem;
+}
+
+.review .box-container .box .stars i {
+   font-size: 1.7rem;
+   color: var(--black);
+}
+
+/* Contact section */
 
 
 
