--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -411,7 +411,7 @@ section {
    border-left: var(--border-left);
    box-shadow: var(--box-shadow);
    padding: 2rem;
-   backdrop-filter: 4rem;
+   backdrop-filter: blur(.4rem);
 }
 
 .review .box-container .box .image {
@@ -461,9 +461,44 @@ section {
 
 /* Contact section */
 
+.contact form {
+   max-width: 60rem;
+   margin: 1rem auto;
+   text-align: center;
+   background: var(--background);
+   border-radius: .5rem;
+   border: var(--border);
+   border-top: var(--border-top);
+   border-left: var(--border-left);
+   box-shadow: var(--box-shadow);
+   padding: 2rem;
+   backdrop-filter: blur(.4rem);
+}
 
+.contact form .box {
+   width: 100%;
+   background: var(--background);
+   border-radius: .5rem;
+   margin: .7rem 0;
+   box-shadow: var(--box-shadow);
+   padding: 1rem 1.2rem;
+   font-size: 1.5rem;
+   color: var(--white);
+   text-transform: none;
+   font-weight: 300;
+}
 
+.contact form .box::placeholder {
+   color: #eee;
+   text-transform: capitalize;
+}
 
+.contact form textarea {
+   height: 15rem;
+   resize: none;
+}
+
+/* Footer section */
 
 
 
